# Claude-Agent-Fleet

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FLEET-OPS.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fleet-watchdog.yml  market-monitor.yml  pages.yml  regulatory-oracle.yml  research-digest.yml  sanctions-list-monitor.yml  synthesis-engine.yml
agents/fleet_watchdog/: README.md  agent.py  prompt.md
agents/market_monitor/: README.md  agent.py  prompt.md
agents/regulatory_oracle/: README.md  agent.py  prompt.md
agents/research_digest/: README.md  agent.py  prompt.md
agents/sanctions_list_monitor/: README.md  agent.py  prompt.md
agents/synthesis_engine/: README.md  agent.py  prompt.md
docs/: RESTORE-POINTS.md
docs/case-studies/: agent-self-repair.md  daily-intelligence-digest.md  onchain-sanctions-hit.md  regulatory-enforcement-response.md
docs/examples/: report-template-reference.html  structural-reference-agent.md
docs/patterns/: agent-kernel.md  evaluation-harness.md  execution-scaffolding.md  fallback-chains.md  fleet-evolution.md  generated-registry.md  idempotency-outbox.md  jit-budget-management.md  propose-and-gate.md  quality-self-rating.md  self-repair.md  state-management.md  visual-cards.md
examples/alpha-lab/: AGENT.md
examples/breaking-news-monitor/: AGENT.md
examples/calendar-alerts/: AGENT.md
examples/case-qa-reviewer/: AGENT.md
examples/committee-pack-assembler/: AGENT.md
examples/compliance-intelligence-hub/: AGENT.md
examples/control-testing/: AGENT.md
examples/daily-intelligence-brief/: AGENT.md
examples/data-quality-sentinel/: AGENT.md
examples/defi-protocol-monitor/: AGENT.md
examples/exam-response-coordinator/: AGENT.md
examples/execution-scaffold/: AGENT.md
examples/fleet-auto-repair/: AGENT.md
fleet_core/: __init__.py  config.py  publisher.py  runner.py
schemas/: agent-skill-frontmatter.md  data-layer.sql  notion-intelligence-feed.md  slack-block-kit-templates.md  slack-canvas-structure.md  slack-workspace-architecture.md
showcase/: README.md  index.html
tests/: test_agents.py  test_config.py  test_examples.py  test_kernel.py  test_publisher.py  test_runner.py  test_sanctions_delta.py
(+21 files in other folders)
