[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-agent-fleet"
version = "0.2.0"
description = "Reference framework and runnable example agents for Claude-powered agent fleets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Max Moran" }]
keywords = ["claude", "anthropic", "agents", "automation", "slack"]
dependencies = [
    "anthropic>=0.39.0",
    "slack-sdk>=3.33.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/maxmoran23/Claude-Agent-Fleet"
Issues = "https://github.com/maxmoran23/Claude-Agent-Fleet/issues"

[tool.setuptools.packages.find]
include = ["fleet_core*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
